@@ -2,10 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
     <name>BookShopOnline</name>
     <artifactId>BookShopOnline</artifactId>
-    <groupId>com.example</groupId>
+    <groupId>com.BookShop</groupId>
+    <packaging>jar</packaging>
+    
     <version>1.0.0-SNAPSHOT</version>
 
     <description>
@@ -99,9 +100,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <main.class>com.example.test.TestStart</main.class>
+        <main.class>com.example.test.*</main.class>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>11</java.version>
-        <junit.jupiter.version>5.0.3</junit.jupiter.version>
+        <junit.jupiter.version>5.3.1</junit.jupiter.version>
         <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
         <maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
         <maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
@@ -125,7 +128,13 @@
 		<dependency>
     		<groupId>org.jacoco</groupId>
     		<artifactId>jacoco-maven-plugin</artifactId>
-    		<version>0.8.1</version>
+    		<version>0.8.6</version>
+    		<exclusions>
+    			<exclusion>
+    				<groupId>org.codehaus.plexus</groupId>
+    				<artifactId>plexus-container-default</artifactId>
+    			</exclusion>
+    		</exclusions>
 		</dependency>
     
         
@@ -165,6 +174,7 @@
       <artifactId>plexus-java</artifactId>
       <version>0.9.11</version>
     </dependency>
+
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-archiver</artifactId>
@@ -185,7 +195,7 @@
 <dependency>
     <groupId>org.junit.jupiter</groupId>
     <artifactId>junit-jupiter-api</artifactId>
-    <version>5.7.0</version>
+    <version>5.3.1</version>
     <scope>test</scope>
 </dependency>
 
@@ -210,10 +220,6 @@
     </dependency>
     
    <!-- https://mvnrepository.com/artifact/org.testfx/testfx-junit -->
-
-    
-    
-    
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-core</artifactId>
@@ -261,7 +267,12 @@
       <version>2.24.5</version>
       <scope>test</scope>
     </dependency>
-    
+        <dependency>
+        <groupId>org.junit.vintage</groupId>
+        <artifactId>junit-vintage-engine</artifactId>
+        <version>5.3.1</version>
+        <scope>test</scope>
+    </dependency>
     <dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>javax.servlet-api</artifactId>
@@ -271,12 +282,34 @@
     
 </dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
+	<dependency>
+  	  <groupId>org.openjfx</groupId>
+   		 <artifactId>javafx-controls</artifactId>
+  	  <version>11.0.2</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
+<dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-graphics</artifactId>
+    <version>11.0.2</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
 
+<dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-base</artifactId>
+    <version>11.0.2</version>
+</dependency>
+
+
+	
     <dependency>
     	<groupId>org.testfx</groupId>
     	<artifactId>testfx-junit5</artifactId>
     	<version>4.0.16-alpha</version>
     </dependency>
+
     </dependencies>
     
     
@@ -284,12 +317,7 @@
     <build>
         <plugins>
        
-    		
-    		
-    		
-    	
-    	 
-            <plugin>
+    		<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.plugin.version}</version>
@@ -301,20 +329,8 @@
                 </configuration>
             </plugin>
             
-            <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.4</version>
-            <configuration>
-                <archive>
-                    <manifest>
-                        <mainClass>
-                        </mainClass>
-                    </manifest>
-                </archive>
-            </configuration>
-        </plugin>
-        <!--  -->
+
+           
         <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jar-plugin</artifactId>
@@ -329,21 +345,46 @@
                  </archive>
              </configuration>
         </plugin>
+        
 		<plugin>
          	<groupId>org.sonarsource.scanner.maven</groupId>
          	<artifactId>sonar-maven-plugin</artifactId>
          	<version>3.7.0.1746</version>
        	</plugin>
         <plugin>
-             <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-surefire-plugin</artifactId>
-  <version>2.22.1</version>
-  <configuration>
-    <argLine>
-      --add-exports javafx.graphics/com.sun.javafx.boundaryLaptop=ALL-UNNAMED
-    </argLine>
-  </configuration>
-				
+            <groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+  			<version>2.19.1</version>
+ 			<configuration>
+ 			    <workingDirectory>${project.build.directory}/test/*</workingDirectory>
+                <options>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                    </options>
+                </configuration>
+	
         </plugin>
             
             
@@ -361,12 +402,12 @@
           	<plugin>
           		<groupId>org.jacoco</groupId>
           		<artifactId>jacoco-maven-plugin</artifactId>
-          		<version>0.8.1</version>
+          		<version>0.8.6</version>
           		<executions>
      <execution>
-      <id>report</id>
       <goals>
-       <goal>report</goal>
+       <goal>verify</goal>
+       <goal>test</goal>
       </goals>
       <phase>verify</phase>
      </execution>
@@ -375,11 +416,6 @@
           	</plugin>
         </plugins>
         
-        <resources>
-     <resource>
-       <directory>src/main/java/images</directory>
-       <includes><include>*.png</include></includes>
-     </resource>
-   </resources>
+
     </build>
 </project>
